--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
     "googleapis": "^135.0.0",
     "next": "14.2.1",
+    "next-sanity": "^9.0.13",
     "react": "^18",
     "react-dom": "^18"
   },
